--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "kekstagram",
   "version": "22.0.0",
   "private": true,
-  "description": "Личный проект «{{projectTitle}}» от HTML Academy",
+  "description": "Личный проект «Кекстаграм» от HTML Academy",
   "repository": {
     "type": "git",
-    "url": "{{sshUrl}}"
+    "url": "git@github.com:htmlacademy-javascript/222997-kekstagram-22.git"
   },
   "bugs": {
-    "url": "{{bugsUrl}}"
+    "url": "https://github.com/htmlacademy-javascript/222997-kekstagram-22/issues"
   },
   "devDependencies": {
     "browser-sync": "2.26.14",
